--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "functionhappy": "^1.0.0",
@@ -36,6 +37,7 @@
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "snazzy": "^4.0.0",
+    "style-loader": "^0.21.0",
     "webpack": "^1.13.1",
     "webpack-node-externals": "^1.2.0"
   },
